force-app/main/default/objects/Visa_Request__c/Visa_Request__c.object-meta.xml
<CustomObject>
    <label>Visa Request</label>
    <nameField>
        <label>Visa Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visa Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>