force-app/main/default/objects/Visa_Request__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <formula>CASE( 
Accommodation_Paid_by__c,
&quot;Delegate&quot;, (FirstName__c &amp;&quot; &quot;&amp; LastName__c),
&quot;Delegate&apos;s Company&quot;, Org_paying_for_your_travel__c ,
&quot;Linux Foundation&quot;,&quot;The Linux Foundation&quot;,
&quot;The Linux Foundation&quot;,&quot;The Linux Foundation&quot;,
&quot;The Linux Foundation&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accommodation</label>
    <type>Text</type>
</CustomField>