force-app/main/default/objects/Visa_Request__c/fields/Accommodation_Paid_by__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Paid_by__c</fullName>
    <label>Accommodation Paid by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delegate</fullName>
            </value>
            <value>
                <fullName>Linux Foundation</fullName>
            </value>
            <value>
                <fullName>The Linux Foundation</fullName>
            </value>
            <value>
                <fullName>Delegate&apos;s Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>