force-app/main/default/objects/Visa_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>mailing_Address1__c + BR() + 
IF( ISBLANK(mailing_Address_2__c),&apos;&apos;,mailing_Address_2__c + BR()) 
+ 
IF(NOT(ISBLANK(City__c)),City__c + IF(OR(NOT(ISBLANK(State__c)),NOT(ISBLANK(Zipcode__c))),&apos;, &apos;,&apos;&apos;),&apos;&apos;)
+ 
IF(NOT(ISBLANK(State__c)),State__c+&apos; &apos;,&apos;&apos;) 
+ 
IF(NOT(ISBLANK(Zipcode__c)),Zipcode__c+&apos;&apos;,&apos;&apos;) 
+ 
BR() + Country__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>