force-app/main/default/objects/Visa_Request__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Will be attending</fullName>
            </value>
            <value>
                <fullName>I have been invited to speak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>