force-app/main/default/objects/Visa_Request__c/fields/Blocklist__c.field-meta.xml
<CustomField>
    <fullName>Blocklist__c</fullName>
    <formula>Contact__r.Visa_Request_Blocklist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocklist</label>
    <type>Checkbox</type>
</CustomField>