force-app/main/default/objects/Visa_Request__c/fields/Company_or_Organization__c.field-meta.xml
<CustomField>
    <fullName>Company_or_Organization__c</fullName>
    <label>Company or Organization</label>
    <length>250</length>
    <type>Text</type>
</CustomField>