force-app/main/default/objects/Visa_Request__c/fields/Days_Since_Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Status_Change__c</fullName>
    <formula>TODAY() - DATEVALUE(Last_Status_Change__c)</formula>
    <label>Days Since Last Status Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>