force-app/main/default/objects/Visa_Request__c/fields/Embassy__c.field-meta.xml
<CustomField>
    <fullName>Embassy__c</fullName>
    <label>Embassy</label>
    <length>28</length>
    <type>Text</type>
</CustomField>