force-app/main/default/objects/Visa_Request__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Visa Requests</relationshipLabel>
    <relationshipName>Visa_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>