force-app/main/default/objects/Visa_Request__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <formula>Event__r.End_Date__c</formula>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>