force-app/main/default/objects/Visa_Request__c/fields/mailing_Address1__c.field-meta.xml
<CustomField>
    <fullName>mailing_Address1__c</fullName>
    <label>mailing Address1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>