force-app/main/default/objects/Visa_Request__c/fields/Office_phone__c.field-meta.xml
<CustomField>
    <fullName>Office_phone__c</fullName>
    <label>Office phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>