force-app/main/default/objects/Visa_Request__c/fields/Org_paying_for_your_travel__c.field-meta.xml
<CustomField>
    <fullName>Org_paying_for_your_travel__c</fullName>
    <label>Org paying for your travel</label>
    <length>250</length>
    <type>Text</type>
</CustomField>