force-app/main/default/objects/Visa_Request__c/fields/Original_Visa_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Visa_Request_Date__c</fullName>
    <label>Original Visa Request Date</label>
    <type>Date</type>
</CustomField>