force-app/main/default/objects/Visa_Request__c/fields/Participate__c.field-meta.xml
<CustomField>
    <fullName>Participate__c</fullName>
    <label>Participate</label>
    <length>28</length>
    <type>Text</type>
</CustomField>