force-app/main/default/objects/Visa_Request__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>