force-app/main/default/objects/Visa_Request__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <description>shows registration type from associated event registration</description>
    <label>Registration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>