force-app/main/default/objects/Visa_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Visa Letter Sent</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>