force-app/main/default/objects/Visa_Request__c/fields/SugarCRM_GUID__c.field-meta.xml
<CustomField>
    <fullName>SugarCRM_GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SugarCRM GUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>