force-app/main/default/objects/Visa_Request__c/fields/Visa_Request_Blocklist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visa_Request_Blocklist_Notes__c</fullName>
    <description>Formula from Contact object field</description>
    <formula>Contact__r.Visa_Request_Blocklist_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visa Request Blocklist Notes</label>
    <type>Text</type>
</CustomField>