force-app/main/default/objects/Visa_Request__c/listViews/Blacklist.listView-meta.xml
<ListView>
    <fullName>Blacklist</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocklist__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blocklist</label>
</ListView>