force-app/main/default/objects/Visa_Request__c/listViews/New_Request1.listView-meta.xml
<ListView>
    <fullName>New_Request1</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Registered__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Event__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>SF New Request</label>
</ListView>