force-app/main/default/objects/Visa_Request__c/listViews/No_Longer_Needed.listView-meta.xml
<ListView>
    <fullName>No_Longer_Needed</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>No Longer Needed</value>
    </filters>
    <label>No Longer Needed</label>
</ListView>