force-app/main/default/objects/Visa_Request__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Date_Sent__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pending</label>
</ListView>