force-app/main/default/objects/Visa_Request__c/listViews/Sent.listView-meta.xml
<ListView>
    <fullName>Sent</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Office_phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Visa Letter Sent,Denied,Expired,Duplicate</value>
    </filters>
    <label>Sent</label>
</ListView>